--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,42 +23,4 @@ jobs:
         run: chmod +x mvnw
 
       - name: Build with Maven
-        run: ./mvnw --no-transfer-progress --batch-mode compile
-  
-  publish-docs-reports:
-    needs: build	
-    runs-on: ubuntu-latest
-    
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-
-      - name: Grant execute permission for mvnw
-        run: chmod +x mvnw
-        
-      - name: Export project version
-        run: echo "PROJECT_VERSION=$(./mvnw help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
-
-      - name: Generate reports
-        run: ./mvnw --no-transfer-progress --batch-mode site
-
-      - name: Deploy maven reports to GitHub Pages as current version
-        uses: JamesIves/github-pages-deploy-action@v4.2.2
-        with:
-          branch: gh-pages
-          clean: true
-          folder: target/site
-          target-folder: docs/${{ env.PROJECT_VERSION }}/site
-
-      - name: Deploy maven reports to GitHub Pages as latest version
-        uses: JamesIves/github-pages-deploy-action@v4.2.2
-        with:
-          branch: gh-pages
-          clean: true
-          folder: target/site
-          target-folder: docs/latest/site
+        run: ./mvnw --no-transfer-progress --batch-mode test compile
