--- a/crypto-key-secp256k1/pom.xml
+++ b/crypto-key-secp256k1/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>crypto-keys</artifactId>
         <groupId>com.syntifi.crypto</groupId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>0.1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -19,17 +19,24 @@
         <dependency>
             <groupId>com.syntifi.crypto</groupId>
             <artifactId>crypto-key-common</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <version>0.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.web3j</groupId>
             <artifactId>core</artifactId>
             <version>${web3j.version}</version>
         </dependency>
+        <!-- Bumping jackson version from web3j to solve vulnerabilities -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.1</version>
+            <scope>compile</scope>
+        </dependency>
         <dependency>
             <groupId>com.syntifi.crypto</groupId>
             <artifactId>crypto-key-common</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <version>0.1.0</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
@@ -39,5 +46,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
 </project>
