--- a/crypto-key-ed25519/pom.xml
+++ b/crypto-key-ed25519/pom.xml
@@ -18,12 +18,12 @@
         <dependency>
             <groupId>com.syntifi.crypto</groupId>
             <artifactId>crypto-key-common</artifactId>
-            <version>0.3.0-SNAPSHOT</version>
+            <version>0.3.0</version>
         </dependency>
         <dependency>
             <groupId>com.syntifi.crypto</groupId>
             <artifactId>crypto-key-common</artifactId>
-            <version>0.3.0-SNAPSHOT</version>
+            <version>0.3.0</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
