--- a/crypto-key-secp256k1/pom.xml
+++ b/crypto-key-secp256k1/pom.xml
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>com.syntifi.crypto</groupId>
             <artifactId>crypto-key-common</artifactId>
-            <version>0.3.0-SNAPSHOT</version>
+            <version>0.3.0</version>
         </dependency>
         <dependency>
             <groupId>org.web3j</groupId>
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>com.syntifi.crypto</groupId>
             <artifactId>crypto-key-common</artifactId>
-            <version>0.3.0-SNAPSHOT</version>
+            <version>0.3.0</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
