--- a/crypto-key-secp256k1/pom.xml
+++ b/crypto-key-secp256k1/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>crypto-keys</artifactId>
         <groupId>com.syntifi.crypto</groupId>
-        <version>0.4.0-SNAPSHOT</version>
+        <version>0.4.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>com.syntifi.crypto</groupId>
             <artifactId>crypto-key-common</artifactId>
-            <version>0.4.0-SNAPSHOT</version>
+            <version>0.4.0</version>
         </dependency>
         <dependency>
             <groupId>org.web3j</groupId>
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>com.syntifi.crypto</groupId>
             <artifactId>crypto-key-common</artifactId>
-            <version>0.4.0-SNAPSHOT</version>
+            <version>0.4.0</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
