--- a/crypto-key-common/pom.xml
+++ b/crypto-key-common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>crypto-keys</artifactId>
         <groupId>com.syntifi.crypto</groupId>
-        <version>0.4.0</version>
+        <version>0.5.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
